<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/detail"
    tools:context=".DetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detailTitle"
        android:textAlignment="center"
        android:text="Title"
        android:layout_marginTop="14dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:textColor="@color/green"/>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:id="@+id/detailImage"
        android:padding="8dp"
        android:layout_gravity="center"
        android:src="@drawable/uploadimg"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="Budget"
        android:layout_gravity="center"
        android:id="@+id/detailBudg"
        android:textSize="18sp"
        android:textColor="@color/green"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="Date"
        android:layout_gravity="center"
        android:id="@+id/detailDate"
        android:textSize="18sp"
        android:textColor="@color/green"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="Description"
        android:layout_gravity="center"
        android:id="@+id/detailDesc"
        android:textSize="18sp"
        android:textColor="@color/green"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:menu_fab_size="normal"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            app:menu_colorPressed="@color/green"
            app:menu_colorNormal="@color/green"
            app:menu_icon="@drawable/baseline_format_list_bulleted_24"
            app:menu_openDirection="up"
            app:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editButton"
                android:src="@drawable/baseline_edit_24"
                app:fab_showShadow="true"
                app:fab_colorNormal="@color/green"
                app:fab_size="mini"/>

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteButton"
                android:src="@drawable/baseline_delete_24"
                app:fab_showShadow="true"
                app:fab_colorNormal="@color/yellow"
                app:fab_size="mini"/>

        </com.github.clans.fab.FloatingActionMenu>

    </RelativeLayout>

</LinearLayout>