<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/green_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update Image"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/green"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/uploadimg"
                android:id="@+id/updateImage"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/updateTitle"
                android:background="@drawable/green_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="Enter title"
                android:gravity="start|center_vertical"
                android:textColor="@color/green"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/updateDesc"
                android:background="@drawable/green_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="Enter description"
                android:gravity="start|center_vertical"
                android:textColor="@color/green"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/updateBudg"
                android:background="@drawable/green_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="Enter budget"
                android:gravity="start|center_vertical"
                android:textColor="@color/green"/>

            <TextView
                android:id="@+id/updateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dd/mm/yyyy"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose Date"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="start|center_vertical"
                app:layout_constraintVertical_bias="0.606" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Update"
                android:id="@+id/updateButton"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>